UT-27 Fix bueno del manejo de los VARCHAR, NVARCHAR, TEXT, NTEXT ... en SqlServer